Fix site on mobile & add static nginx config

--- a/src/css/account.css
+++ b/src/css/account.css
@@ -58,6 +58,8 @@
 
 .accountContainerMain {
     padding: 20px;
+    max-height: 500px;
+    overflow: auto;
 }
 
 .accountStatsCard {
